--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,9 @@ input {
 
 select {
   color: #eaf1fd;
+  height: 25px;
+  width: 90px;
+  text-align: center;
   font-size: 16px;
   font-weight: bold;
   border-radius: 5px;
@@ -101,11 +104,11 @@ select {
 }
 
 button {
-  height: 75px;
-  width: 150px;
+  height: 50px;
+  width: 75px;
   text-align: center;
   margin-bottom: 5px;
-  font-size: 35px;
+  font-size: 25px;
   background-color: #eaf1fd;
   border-radius: 10px;
   background-color: rgb(153, 255, 0);
