--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ p {
   font-size: 1em;
   margin-top: 5px;
   font-weight: bold;
+  overflow-wrap: anywhere;
 }
 
 input {
@@ -49,7 +50,7 @@ input {
   background-color: #303235;
   font-size: 25px;
   color: #eaf1fd;
-  border-radius: 5px;
+  border-radius: .25em;
   caret-color: rgb(153, 255, 0);
 }
 
@@ -78,12 +79,11 @@ input {
 }
 
 .number-input {
-  height: 75px;
-  width: 200px;
+  height: 5rem;
+  width: 20rem;
   text-align: center;
-  margin-bottom: 1px;
-  margin-top: 2px;
-  font-size: 50px;
+  margin-top: 5px;
+  font-size: 2em;
   font-weight: bold;
 }
 
@@ -94,6 +94,7 @@ input {
   padding-right: 0px;
   margin-bottom: -1px;
   border-color: rgb(153, 255, 0);
+  color: rgb(153, 255, 0);
 }
 
 .range-indicator-container {
@@ -171,7 +172,7 @@ select {
 
 .target-guesses {
   margin: 0 15px 0 15px;
-  width: 225px;
+  width: 5em;
   font-size: 1.5em;
   overflow: auto;
   word-break: break-all;
@@ -192,11 +193,11 @@ select {
 }
 
 button {
-  height: 65px;
-  width: 110px;
+  height: 2.5em;
+  width: 5em;
   text-align: center;
   margin-bottom: 5px;
-  font-size: 25px;
+  font-size: 1em;
   background-color: #eaf1fd;
   border-radius: 10px;
   background-color: rgb(153, 255, 0);
